<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="salvar">Salvar</string>
    <string name="preco">Preço</string>
    <string name="produto">Produto</string>
    <string name="descricao">Descricao</string>
    <string name="carregar_imagem">Carregar imagem</string>
    <string name="url_da_imagem">Url da imagem</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="menu_padrao">Padrão</string>
    <string name="menu_preco_desc">Preco ▼</string>
    <string name="menu_preco_asc">Preco ▲</string>
    <string name="menu_nome_desc">Nome ▼</string>
    <string name="menu_nome_asc">Nome ▲</string>
    <string name="menu_ordenar">Ordenar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_usuario">Cadastrar usuário</string>
    <string name="nome">Nome</string>
    <string name="sair">Sair</string>
    <string name="perfil">Perfil</string>
</resources>