<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/lista_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_usuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        android:hint="@string/usuario"
        android:textSize="@dimen/text_22sp"
        android:theme="@style/text_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_senha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        android:hint="@string/senha"
        android:textSize="@dimen/text_22sp"
        android:theme="@style/text_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_senha"
        android:text="@string/entrar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cadastrar_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:text="@string/cadastrar_usuario"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>