<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_background"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FormularioCadastro">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_formulario"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagem_padrao" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_produto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:hint="@string/produto"
            android:textSize="@dimen/text_22sp"
            android:theme="@style/text_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_formulario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_descricao"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:hint="@string/descricao"
            android:textSize="@dimen/text_22sp"
            android:theme="@style/text_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_produto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_preco"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:hint="@string/preco"
            android:textSize="@dimen/text_22sp"
            android:theme="@style/text_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_descricao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:backgroundTint="@color/cor_fab"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_preco"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

